--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Motorcycle Classifier</title>
+    <title>MNIST - Dube.io</title>
   </head>
   <body>
     <div id="app"></div>
